--- a/index.html
+++ b/index.html
@@ -487,10 +487,10 @@ a {
           <div class="navbar-menu" id="open-navbar1">
             <ul class="navbar-nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="ourprojects.html">Our Projects</a></li>
-              <li><a href="careers.html">Careers</a></li>
-              <li><a href="cotact.html">Contact</a></li>
+              <li><a href="https://patilnidhi.github.io/About/">About</a></li>
+              <li><a href="https://patilnidhi.github.io/About/">Our Projects</a></li>
+              <li><a href="https://patilnidhi.github.io/About/">Careers</a></li>
+              <li><a href="https://patilnidhi.github.io/About/">Contact</a></li>
             </ul>
           </div>
         </div>
