--- a/index.html
+++ b/index.html
@@ -2602,12 +2602,12 @@ $(document).ready(function() {
             <div class="footer-section quick-links">
                 <h3 class="footerh">QUICK LINKS</h3>
                 <ul>
-                   <a href="about.html"><li>About us</li></a> 
-                   <li><a href="ourprojects.html"></a>Our Projects</li>
-                    <li><a href="careers.html">Careers</a></li>
+                   <a href="https://patilnidhi.github.io/About/"><li>About us</li></a> 
+                   <li><a href="https://patilnidhi.github.io/About/"></a>Our Projects</li>
+                    <li><a href="https://patilnidhi.github.io/About/">Careers</a></li>
                     <a href="Privacy Policy.html"><li>Privacy Policy</li></a>
                     <a href="Terms & Condition.html"><li>Terms & Condition</li></a>
-                    <a href="cotact.html"><li>Contact us</li></a>
+                    <a href="https://patilnidhi.github.io/About/"><li>Contact us</li></a>
                 </ul>
                 <p>38, Ground Floor, Holding No 3L, K/299, Main Road, Hatiara, Newtown, Kolkata, West Bengal 700157</p>
             </div>
