--- a/index.html
+++ b/index.html
@@ -2606,7 +2606,7 @@ $(document).ready(function() {
                    <li><a href="https://patilnidhi.github.io/About/"></a>Our Projects</li>
                     <li><a href="https://patilnidhi.github.io/About/">Careers</a></li>
                     <a href="Privacy Policy.html"><li>Privacy Policy</li></a>
-                    <a href="Terms & Condition.html"><li>Terms & Condition</li></a>
+                    <a href="https://patilnidhi.github.io/termsandcondations/"><li>Terms & Condition</li></a>
                     <a href="https://patilnidhi.github.io/About/"><li>Contact us</li></a>
                 </ul>
                 <p>38, Ground Floor, Holding No 3L, K/299, Main Road, Hatiara, Newtown, Kolkata, West Bengal 700157</p>
