--- a/index.html
+++ b/index.html
@@ -2605,7 +2605,7 @@ $(document).ready(function() {
                    <a href="https://patilnidhi.github.io/About/"><li>About us</li></a> 
                    <li><a href="https://patilnidhi.github.io/About/"></a>Our Projects</li>
                     <li><a href="https://patilnidhi.github.io/About/">Careers</a></li>
-                    <a href="Privacy Policy.html"><li>Privacy Policy</li></a>
+                    <a href="https://patilnidhi.github.io/privacy-/"><li>Privacy Policy</li></a>
                     <a href="https://patilnidhi.github.io/termsandcondations/"><li>Terms & Condition</li></a>
                     <a href="https://patilnidhi.github.io/About/"><li>Contact us</li></a>
                 </ul>
