--- a/index.html
+++ b/index.html
@@ -2603,7 +2603,7 @@ $(document).ready(function() {
                 <h3 class="footerh">QUICK LINKS</h3>
                 <ul>
                    <a href="https://patilnidhi.github.io/About/"><li>About us</li></a> 
-                   <li><a href=https://patilnidhi.github.io/About/"></a>Our Projects</li>
+                   <li><a href=https://patilnidhi.github.io/About/">Our Projects</li></a>
                     <li><a href="https://patilnidhi.github.io/About/">Careers</a></li>
                     <a href="https://patilnidhi.github.io/privacy-/"><li>Privacy Policy</li></a>
                     <a href="https://patilnidhi.github.io/termsandcondations/"><li>Terms & Condition</li></a>
