--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@ handleSmallScreens()
     <div class="row g-3">
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/merlin-isle/">
+    <a href="https://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
