--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@ handleSmallScreens()
     </div>
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/utsodhaara-residencia/">
+    <a href="https://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
@@ -1035,7 +1035,7 @@ handleSmallScreens()
     </div>
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/forum-estates-aranya/">
+    <a href="https://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
@@ -1067,7 +1067,7 @@ handleSmallScreens()
     </div>
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/green-vega/">
+    <a href="https://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
@@ -1099,7 +1099,7 @@ handleSmallScreens()
     </div>
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/ps-vaanya-newtown/">
+    <a href="https://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
@@ -1131,7 +1131,7 @@ handleSmallScreens()
     </div>
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/dtc-capital-city-rajarhat/">
+    <a href="https://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
@@ -1174,7 +1174,7 @@ handleSmallScreens()
     <div class="row g-3">
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/forum-estates-aranya/">
+    <a href="https://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
@@ -1206,7 +1206,7 @@ handleSmallScreens()
     </div>
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/the-v-newtown/">
+    <a href="https://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
@@ -1238,7 +1238,7 @@ handleSmallScreens()
     </div>
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/ps-vaanya-newtown/">
+    <a href="https://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
@@ -1269,7 +1269,7 @@ handleSmallScreens()
     </div>
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/sanctuary-tollygunge/">
+    <a href="https://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
@@ -1300,7 +1300,7 @@ handleSmallScreens()
     </div>
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/z-residences-em-bypass/">
+    <a href="https://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
@@ -1331,7 +1331,7 @@ handleSmallScreens()
     </div>
     <div class="col-12 col-md-4">
     <div class="project-wrapper">
-    <a href="https://www.propvestors.in/residential-project/tata-housing-88-east/">
+    <a href="hhttps://patilnidhi.github.io/propdetail/">
     <div class="row g-0">
     <div class="col-5">
     <div class="project-image">
@@ -1374,7 +1374,7 @@ handleSmallScreens()
         <div class="row g-3">
         <div class="col-12 col-md-4">
         <div class="project-wrapper">
-        <a href="https://www.propvestors.in/residential-project/merlin-isle/">
+        <a href="https://patilnidhi.github.io/propdetail/">
         <div class="row g-0">
         <div class="col-5">
         <div class="project-image">
@@ -1406,7 +1406,7 @@ handleSmallScreens()
         </div>
         <div class="col-12 col-md-4">
         <div class="project-wrapper">
-        <a href="https://www.propvestors.in/residential-project/utsodhaara-residencia/">
+        <a href="https://patilnidhi.github.io/propdetail/">
         <div class="row g-0">
         <div class="col-5">
         <div class="project-image">
@@ -1438,7 +1438,7 @@ handleSmallScreens()
         </div>
         <div class="col-12 col-md-4">
         <div class="project-wrapper">
-        <a href="https://www.propvestors.in/residential-project/forum-estates-aranya/">
+        <a href="https://patilnidhi.github.io/propdetail/">
         <div class="row g-0">
         <div class="col-5">
         <div class="project-image">
@@ -1470,7 +1470,7 @@ handleSmallScreens()
         </div>
         <div class="col-12 col-md-4">
         <div class="project-wrapper">
-        <a href="https://www.propvestors.in/residential-project/green-vega/">
+        <a href="https://patilnidhi.github.io/propdetail/">
         <div class="row g-0">
         <div class="col-5">
         <div class="project-image">
@@ -1502,7 +1502,7 @@ handleSmallScreens()
         </div>
         <div class="col-12 col-md-4">
         <div class="project-wrapper">
-        <a href="https://www.propvestors.in/residential-project/ps-vaanya-newtown/">
+        <a href="https://patilnidhi.github.io/propdetail/">
         <div class="row g-0">
         <div class="col-5">
         <div class="project-image">
@@ -1534,7 +1534,7 @@ handleSmallScreens()
         </div>
         <div class="col-12 col-md-4">
         <div class="project-wrapper">
-        <a href="https://www.propvestors.in/residential-project/dtc-capital-city-rajarhat/">
+        <a href="https://patilnidhi.github.io/propdetail/">
         <div class="row g-0">
         <div class="col-5">
         <div class="project-image">
