--- a/index.html
+++ b/index.html
@@ -487,10 +487,10 @@ a {
           <div class="navbar-menu" id="open-navbar1">
             <ul class="navbar-nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="https://patilnidhi.github.io/About/">About</a></li>
-              <li><a href="https://patilnidhi.github.io/About/">Our Projects</a></li>
-              <li><a href="https://patilnidhi.github.io/About/">Careers</a></li>
-              <li><a href="https://patilnidhi.github.io/About/">Contact</a></li>
+              <li><a href="https://patilnidhi.github.io/About-us/">About</a></li>
+              <li><a href="https://patilnidhi.github.io/our/">Our Projects</a></li>
+              <li><a href="https://patilnidhi.github.io/career/">Careers</a></li>
+              <li><a href="https://patilnidhi.github.io/contact-us/">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -2602,12 +2602,12 @@ $(document).ready(function() {
             <div class="footer-section quick-links">
                 <h3 class="footerh">QUICK LINKS</h3>
                 <ul>
-                   <a href="https://patilnidhi.github.io/About/"><li>About us</li></a> 
-                   <li><a href="https://patilnidhi.github.io/About/">Our Projects</li></a>
-                    <li><a href="https://patilnidhi.github.io/About/">Careers</a></li>
+                   <a href="https://patilnidhi.github.io/About-us/"><li>About us</li></a> 
+                   <li><a href="https://patilnidhi.github.io/our/">Our Projects</li></a>
+                    <li><a href="https://patilnidhi.github.io/career/">Careers</a></li>
                     <a href="https://patilnidhi.github.io/privacy-/"><li>Privacy Policy</li></a>
                     <a href="https://patilnidhi.github.io/termsandcondations/"><li>Terms & Condition</li></a>
-                    <a href="https://patilnidhi.github.io/About/"><li>Contact us</li></a>
+                    <a href="https://patilnidhi.github.io/contact-us/"><li>Contact us</li></a>
                 </ul>
                 <p>38, Ground Floor, Holding No 3L, K/299, Main Road, Hatiara, Newtown, Kolkata, West Bengal 700157</p>
             </div>
